[package]
name = "power-protobuf-lib"
version = "0.1.11"
edition = "2021"
description = "lib for protobuf!"
license = "MIT"
documentation = "https://docs.rs/power-protobuf-lib"
homepage = "https://github.com/powermacros/power-protobuf"
repository = "https://github.com/powermacros/power-protobuf"

[dependencies]
syn = { version = "2", features = ["full", "extra-traits"] }
proc-macro2 = { version = "1", features = ["span-locations"] }
quote = { version = "1" }
convert_case = "0.6"
syn-prelude = { version = "0.1.3" }
indexmap = { version = "2.0" }
nom = "7.1.3"
cargo_toml = "0.20.0"

[features]
default = ["impl_prost", "tagless", "simplize_rpc_params", "derive_serde"]
# impl_prost: use tonic/prost to implement the protobuf codec and grpc stuff.
impl_prost = []
# impl_protobuf_rs: use 'stepancheg/rust-protobuf' to implement the protbuf codec.
impl_protobuf_rs = []
# enable serde macro derives
derive_serde = []
# tagless: allows auto increduce tag number by previous tag, if the begging tag is not exists, initial value will be set defaultly (message begins with 1, enum begins with 0).
tagless = []
simplize_rpc_params = []
